// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<li
  page="/wallet"
>
  Send
</li>
`;

exports[`renders correctly 2`] = `
<li
  page="/wallet/send"
>
  Send
</li>
`;

exports[`renders correctly 3`] = `
<li
  page="/wallet/receive"
>
  Receive
</li>
`;

exports[`renders correctly 4`] = `
<li
  page="/wallet/history"
>
  History
</li>
`;

exports[`renders correctly 5`] = `
<li
  page="/wallet/support"
>
  Support
</li>
`;
